# bluemailer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  auth.json  cancel.json  matched.json  test.json
.github/workflows/: docker-image.yml  release-docker.yml
src/: api.rs  mailer.rs  main.rs
src/tasks/: api.rs  auth_token.rs  mod.rs
