[package]
name = "bluemailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
lettre = { version = "0.11.4", features = [
    "builder",
    "pool",
    "smtp-transport",
    "tokio1-native-tls",
    "tokio1",
] }
log = "0.4.21"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
